deployments/staging/ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: martian-imperial-year-table
spec:
  rules:
    - host: martian-imperial-year-table.staging.c4se.jp
      http:
        paths:
          - path: /
            backend:
              serviceName: martian-imperial-year-table
              servicePort: 80
  tls:
    - hosts: [martian-imperial-year-table.staging.c4se.jp]
      secretName: letsencrypt-tls
